--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 
 #container canvas {
 	background: rgb( 8, 54, 129 );
+	outline: none;
 	
 	-webkit-box-shadow: 1px 1px 3px rgba( 0, 0, 0, 0.8 );
 	   -moz-box-shadow: 1px 1px 3px rgba( 0, 0, 0, 0.8 );
